<resources>
    <string name="app_name">Translation Game!</string>
    <string name="translation_game">Translation Game!</string>
    <string name="play_game">Play Game!</string>
    <string name="tutorial">Tutorial</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="about">About</string>
    <string name="score">Score:</string>
    <string name="game_over">Game Over!</string>
    <string name="go_back_menu">Go Back to Menu</string>
    <string name="you_scored">You scored</string>
    <string name="points">points</string>
    <string name="new_high_score">It\'s a new high score!</string>
    <string name="high_score_is">High score is</string>
    <string name="tutorial_lives">These are your lives,when\n they get to 0, the game ends!</string>
    <string name="tutorial_word">This word will fall from the top of the screen. You should decide if it is the correct translation of the another word that\'s on the top! If your answer is wrong, or the word falls to the botton, you lose one life!</string>
    <string name="tutorial_score">This is your score. The higher it gets, the faster the words will fall!</string>
    <string name="tutorial_button">Negative button! Press if the translation is wrong!</string>
    <string name="tutorial_positive">Positive button! Press if the translation is correct!</string>
    <string name="about_project">Project made entirely by Felipe Magalhães.\nYou can find this and my other projects at my GitHub: <a href="https://github.com/FelipeRRM">https://github.com/FelipeRRM</a>.\n\nYou can also have a look at some of my commercial projects at\nmy portfolio: <a href="http://www.FelipeRRM.com">http://www.FelipeRRM.com</a></string>
</resources>
